-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0, 5.11.1
-
None
http://doc.qt.io/qt-5/qtquick-effects-sprites.html#qml-types-using-the-sprite-engine links to http://doc.qt.io/qt-5/qtquick-imageelements-example.html#spritesequence instead of http://doc.qt.io/qt-5/qml-qtquick-spritesequence.html. Even the links to "SpriteSequence" in the actual reference docs link to the example.
http://doc.qt.io/qt-5/qml-qtquick-spritesequence.html should have a link to the Sprite Sequence example as well.
- is duplicated by
-
QTBUG-67299 broken links to types in docs
-
- Closed
-
- resulted in
-
QTBUG-69606 Doc: Inherited member list contains empty entries in QML types that inherit from Item
-
- Closed
-
| For Gerrit Dashboard: QTBUG-58640 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235176,6 | Doc: Fix broken link targets | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 235288,2 | Doc: Fix broken link targets | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |