Doc: Fix broken link targets

* Rename two section titles that caused confusion for the autolinker.
* Add see also link to correct location from SpriteSequence QML type.

Task-number: QTBUG-58640
Change-Id: I62b941d00198ac56d998ca14b926c7bb37f6c91e
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit afccf3b4654c04c57d4f7e6da09f88e27ffb5a54)